--- a/index.html
+++ b/index.html
@@ -3,10 +3,26 @@
 
 <head>
 	<!-- Required meta tags -->
+	<title>WeiKuOuO - A Useless Person qwq</title>
+
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
-	<title>WeiKuOuO - 一個人</title>
+
+	<meta property="og:url" content="https://weikuouo.tk" />
+	<meta property="og:title" content="WeiKuOuO - A Useless Person qwq" />
+	<meta property="og:type" content="website" />
+	<meta property="og:description" content="我只是個沒用的人qwq" />
+	<meta property="og:image" content="img/logo.png" />
+	
+	<link rel="apple-touch-icon" sizes="198x180" href="img/logo.png">
+	<link rel="shortcut icon" href="img/logo.png">
+	<meta name="apple-mobile-web-app-title" content="WeiKuOuO - A Useless Person qwq">
+	<meta name="application-name" content="WeiKuOuO - A Useless Person qwq">
+	<meta name="msapplication-TileColor" content="#ffb3c6">
+	<meta name="msapplication-TileImage" content="img/logo.png">
+	<meta name="theme-color" content="#ffb3c6">
+  
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/themify-icons.css">
