--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 	<meta property="og:title" content="WeiKuOuO - A Useless Person qwq" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="我只是個沒用的人qwq" />
-	<meta property="og:image" content="img/logo.png" />
+	<meta property="og:image" content="https://weikuouo.tk/img/logo.png" />
 	
-	<link rel="apple-touch-icon" sizes="198x180" href="img/logo.png">
-	<link rel="shortcut icon" href="img/logo.png">
+	<link rel="apple-touch-icon" sizes="198x180" href="https://weikuouo.tk/img/logo.png">
+	<link rel="shortcut icon" href="https://weikuouo.tk/img/logo.png">
 	<meta name="apple-mobile-web-app-title" content="WeiKuOuO - A Useless Person qwq">
 	<meta name="application-name" content="WeiKuOuO - A Useless Person qwq">
 	<meta name="msapplication-TileColor" content="#ffb3c6">
-	<meta name="msapplication-TileImage" content="img/logo.png">
+	<meta name="msapplication-TileImage" content="https://weikuouo.tk/img/logo.png">
 	<meta name="theme-color" content="#ffb3c6">
   
 	<!-- Bootstrap CSS -->
