--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
 								<a target= "_blank", href="https://github.com/WeiKuOuO"><i class="ti-github"></i></a>
 							</div>
 						</div>
+						<div class="banner_content">
+							<h2>Ability</h2>
+							<h7>node.js</h7>
+							<div class="progressS-bar progressNODEJS-bar--normal">
+								<div class="progressNODEJS-bar__bar"></div>
+							</div>
+							<h7>css</h7>
+							<div class="progressS-bar progressCSS-bar--normal">
+								<div class="progressCSS-bar__bar"></div>
+							</div>
+							<h7>html</h7>
+							<div class="progressS-bar progressHTML-bar--normal">
+								<div class="progressHTML-bar__bar"></div>
+							</div>
+						</div>
 					</div>
 					<div class="col-lg-4">
 						<div class="home_right_img">
@@ -76,32 +91,36 @@
 				</div>
 			</div>
 		</div>
+		
 	</section>
-
+	
 	<section class="statistics_area">
 		<div class="container">
 			<div class="row justify-content-lg-start justify-content-center">
 				<div class="col-lg-2 col-md-3">
 					<div class="statistics_item">
-						<h3><span class="counter">0</span></h3>
-						<p>Happy Customer</p>
+						<h3><span class="counter">8</span></h3>
+						<p>Organization</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-3">
 					<div class="statistics_item">
-						<h3><span class="counter">0</span></h3>
-						<p>Ticket Solved</p>
+						<h3><span class="counter">29</span></h3>
+						<p>Repos</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-3">
 					<div class="statistics_item">
-						<h3><span class="counter">0</span>/10</h3>
-						<p>Average Rating</p>
+						<h3><span class="counter">650+</span></h3>
+						<p>Subscribers</p>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+
+
 
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
