--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<!-- Required meta tags -->
-	<title>WeiKuOuO - A Useless Person qwq</title>
+	<title>WeiKuOuO - A Useless Person</title>
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
