--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 								<a target= "_blank", href="https://github.com/WeiKuOuO"><i class="ti-github"></i></a>
 							</div>
 						</div>
-						<div class="banner_content">
+<!-- 						<div class="banner_content">
 							<h2>Ability</h2>
 							<h7>node.js</h7>
 							<div class="progressS-bar progressNODEJS-bar--normal">
@@ -81,7 +81,7 @@
 							<div class="progressS-bar progressHTML-bar--normal">
 								<div class="progressHTML-bar__bar"></div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 					<div class="col-lg-4">
 						<div class="home_right_img">
@@ -94,7 +94,7 @@
 		
 	</section>
 	
-	<section class="statistics_area">
+<!-- 	<section class="statistics_area">
 		<div class="container">
 			<div class="row justify-content-lg-start justify-content-center">
 				<div class="col-lg-2 col-md-3">
@@ -117,7 +117,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 
