--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 						<div class="banner_content">
 							<h3>Mo'in!</h3>
 							<h1 class="text-uppercase">This is Weiku</h1>
-							<h5 class="text-uppercase">A Mei zi uwu</h5>
+							<h5 class="text-uppercase">A Dwvwlowopwr uwu</h5>
 							<div class="social_icons my-5">
 								<a target= "_blank", href="https://www.youtube.com/channel/UCuER7v8bBXWcgDQYhP0sdjA?view_as=subscriber"><i class="ti-youtube"></i></a>
 								<a target= "_blank", href="https://github.com/WeiKuOuO"><i class="ti-github"></i></a>
