--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<meta property="og:title" content="WeiKuOuO - An Useless Person" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="I'm a student who comes from Kaohsiung, Taiwan." />
-	<meta property="og:image" content="https://weikuouo.tk/img/logo.png" />
+	<meta property="og:image" content="https://weikuouo.tk/img/thumbnail.png" />
 	
 	<link rel="apple-touch-icon" sizes="198x180" href="https://weikuouo.tk/img/logo.png">
 	<link rel="shortcut icon" href="https://weikuouo.tk/img/logo.png">
