--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="icon" href="img/favicon.png" type="image/png">
 
-	<meta property="og:url" content="https://weikuouo.tk" />
+	<meta property="og:url" content="https://cuteweiku.ga" />
 	<meta property="og:title" content="WeiKuOuO - An Useless Person" />
 	<meta property="og:type" content="website" />
 	<meta property="og:description" content="I'm a student who comes from Kaohsiung, Taiwan." />
-	<meta property="og:image" content="https://weikuouo.tk/img/thumbnail.png" />
+	<meta property="og:image" content="img/thumbnail.png" />
 	
-	<link rel="apple-touch-icon" sizes="198x180" href="https://weikuouo.tk/img/logo.png">
-	<link rel="shortcut icon" href="https://weikuouo.tk/img/logo.png">
+	<link rel="apple-touch-icon" sizes="198x180" href="img/logo.png">
+	<link rel="shortcut icon" href="img/logo.png">
 	<meta name="apple-mobile-web-app-title" content="WeiKuOuO - A Useless Person qwq">
 	<meta name="application-name" content="WeiKuOuO - A Useless Person qwq">
 	<meta name="msapplication-TileColor" content="#ffb3c6">
-	<meta name="msapplication-TileImage" content="https://weikuouo.tk/img/logo.png">
+	<meta name="msapplication-TileImage" content="img/thumbnail.png">
 	<meta name="theme-color" content="#ffb3c6">
   
 	<!-- Bootstrap CSS -->
